--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   cloud_firestore: ^4.15.10
   firebase_auth: ^4.18.0
   fluttertoast: ^8.2.4
-  shared_preferences: ^2.2.2
+  shared_preferences: ^2.2.3
   get_it: ^7.6.8
   provider: ^6.1.2
 
@@ -77,6 +77,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/motivation.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
