--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   shared_preferences: ^2.2.3
   get_it: ^7.6.8
   provider: ^6.1.2
+  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
