--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   get_it: ^7.6.8
   provider: ^6.1.2
   workmanager: ^0.5.2
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
