--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   provider: ^6.1.2
   workmanager: ^0.5.2
   qr_flutter: ^4.1.0
+  fl_chart: ^0.69.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
