--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   qr_flutter: ^4.1.0
   fl_chart: ^0.69.0
   intl: ^0.19.0
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_test:
